--- a/notebooks/PiperMail.ipynb
+++ b/notebooks/PiperMail.ipynb
@@ -11,27 +11,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-06-08 10:25:05 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' since 1970-01-01 00:00:00+00:00\n",
-      "2018-06-08 10:25:05 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' to since 1970-01-01 00:00:00+00:00\n"
+      "2018-06-08 10:10:53 augurlabs perceval.backends.core.pipermail[10295] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' since 1970-01-01 00:00:00+00:00\n",
+      "2018-06-08 10:10:53 augurlabs perceval.backends.core.pipermail[10295] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' to since 1970-01-01 00:00:00+00:00\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/keanu/temp/augur7/augur/notebooks\n",
-      "/home/keanu/temp/augur7/augur/notebooks\n"
+      "/Users/seanpgoggins/pipermail/augur/notebooks\n",
+      "/Users/seanpgoggins/pipermail/augur/notebooks\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-06-08 10:25:06 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO 1/1 MBoxes downloaded\n",
-      "2018-06-08 10:25:06 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] INFO Done. 2/2 messages fetched; 0 ignored\n",
-      "2018-06-08 10:25:06 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Fetch process completed\n",
-      "2018-06-08 10:25:06 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/aaa-dev/' since 1970-01-01 00:00:00+00:00\n",
-      "2018-06-08 10:25:06 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/aaa-dev/' to since 1970-01-01 00:00:00+00:00\n"
+      "2018-06-08 10:10:53 augurlabs perceval.backends.core.pipermail[10295] INFO 1/1 MBoxes downloaded\n",
+      "2018-06-08 10:10:53 augurlabs perceval.backends.core.mbox[10295] INFO Done. 2/2 messages fetched; 0 ignored\n",
+      "2018-06-08 10:10:53 augurlabs perceval.backends.core.pipermail[10295] INFO Fetch process completed\n",
+      "2018-06-08 10:10:53 augurlabs perceval.backends.core.pipermail[10295] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/aaa-dev/' since 1970-01-01 00:00:00+00:00\n",
+      "2018-06-08 10:10:53 augurlabs perceval.backends.core.pipermail[10295] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/aaa-dev/' to since 1970-01-01 00:00:00+00:00\n"
      ]
     },
     {
@@ -45,23 +45,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-06-08 10:25:47 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO 50/50 MBoxes downloaded\n",
-      "2018-06-08 10:25:47 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message jenkins-aaa <jenkins-aaa at opendaylight.org>:; ignoring\n",
-      "2018-06-08 10:25:47 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message the AAA admin?s perspective, however, I think CRUD APIs over the access policies would be beneficial.; ignoring\n",
-      "2018-06-08 10:25:47 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message jenkins-aaa <jenkins-aaa at opendaylight.org>:; ignoring\n",
-      "2018-06-08 10:25:48 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message jenkins-releng <jenkins-releng at opendaylight.org>:; ignoring\n",
-      "2018-06-08 10:25:48 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message jenkins-releng <jenkins-releng at opendaylight.org<mailto:jenkins-releng at opendaylight.org>>:; ignoring\n",
-      "2018-06-08 10:25:48 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message jenkins-releng <jenkins-releng at opendaylight.org<mailto:jenkins-releng at opendaylight.org>>:; ignoring\n",
-      "2018-06-08 10:25:49 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message this perspective, I feel that any API packaged inside a stable; ignoring\n",
-      "2018-06-08 10:25:49 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message the slide 6, you can see files that we added or modified to add shiro moon filter, realm and authN-token servlet.; ignoring\n",
-      "2018-06-08 10:25:50 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message Ryan Goulding <ryandgoulding at gmail.com<mailto:ryandgoulding at gmail.com>>:; ignoring\n",
-      "2018-06-08 10:25:50 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message ODLKeyTool class:; ignoring\n",
-      "2018-06-08 10:25:50 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message ODLKeyTool class:; ignoring\n",
-      "2018-06-08 10:25:51 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message Ryan Goulding <ryandgoulding at gmail.com>:; ignoring\n",
-      "2018-06-08 10:25:51 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] INFO Done. 1700/1712 messages fetched; 12 ignored\n",
-      "2018-06-08 10:25:51 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Fetch process completed\n",
-      "2018-06-08 10:25:51 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/advisory-group/' since 1970-01-01 00:00:00+00:00\n",
-      "2018-06-08 10:25:51 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/advisory-group/' to since 1970-01-01 00:00:00+00:00\n"
+      "2018-06-08 10:11:08 augurlabs perceval.backends.core.pipermail[10295] INFO 50/50 MBoxes downloaded\n",
+      "2018-06-08 10:11:08 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message jenkins-aaa <jenkins-aaa at opendaylight.org>:; ignoring\n",
+      "2018-06-08 10:11:08 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message the AAA admin?s perspective, however, I think CRUD APIs over the access policies would be beneficial.; ignoring\n",
+      "2018-06-08 10:11:08 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message jenkins-aaa <jenkins-aaa at opendaylight.org>:; ignoring\n",
+      "2018-06-08 10:11:08 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message jenkins-releng <jenkins-releng at opendaylight.org>:; ignoring\n",
+      "2018-06-08 10:11:08 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message jenkins-releng <jenkins-releng at opendaylight.org<mailto:jenkins-releng at opendaylight.org>>:; ignoring\n",
+      "2018-06-08 10:11:08 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message jenkins-releng <jenkins-releng at opendaylight.org<mailto:jenkins-releng at opendaylight.org>>:; ignoring\n",
+      "2018-06-08 10:11:09 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message this perspective, I feel that any API packaged inside a stable; ignoring\n",
+      "2018-06-08 10:11:09 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message the slide 6, you can see files that we added or modified to add shiro moon filter, realm and authN-token servlet.; ignoring\n",
+      "2018-06-08 10:11:09 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message Ryan Goulding <ryandgoulding at gmail.com<mailto:ryandgoulding at gmail.com>>:; ignoring\n",
+      "2018-06-08 10:11:10 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message ODLKeyTool class:; ignoring\n",
+      "2018-06-08 10:11:10 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message ODLKeyTool class:; ignoring\n",
+      "2018-06-08 10:11:10 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message Ryan Goulding <ryandgoulding at gmail.com>:; ignoring\n",
+      "2018-06-08 10:11:10 augurlabs perceval.backends.core.mbox[10295] INFO Done. 1700/1712 messages fetched; 12 ignored\n",
+      "2018-06-08 10:11:10 augurlabs perceval.backends.core.pipermail[10295] INFO Fetch process completed\n",
+      "2018-06-08 10:11:10 augurlabs perceval.backends.core.pipermail[10295] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/advisory-group/' since 1970-01-01 00:00:00+00:00\n",
+      "2018-06-08 10:11:10 augurlabs perceval.backends.core.pipermail[10295] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/advisory-group/' to since 1970-01-01 00:00:00+00:00\n"
      ]
     },
     {
@@ -75,17 +75,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-06-08 10:26:15 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO 33/33 MBoxes downloaded\n",
-      "2018-06-08 10:26:15 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message my perspective - I think the reason I care about the status of a project is that I can then base business features on it.; ignoring\n",
-      "2018-06-08 10:26:15 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message Brian Freeman:; ignoring\n",
-      "2018-06-08 10:26:15 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message Brian Freeman:; ignoring\n",
-      "2018-06-08 10:26:15 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message Brian Freeman:; ignoring\n",
-      "2018-06-08 10:26:15 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message Brian Freeman:; ignoring\n",
-      "2018-06-08 10:26:15 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] WARNING Field 'Message-ID' not found in message Brian Freeman:; ignoring\n",
-      "2018-06-08 10:26:15 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] INFO Done. 349/355 messages fetched; 6 ignored\n",
-      "2018-06-08 10:26:15 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Fetch process completed\n",
-      "2018-06-08 10:26:15 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/affinity-dev/' since 1970-01-01 00:00:00+00:00\n",
-      "2018-06-08 10:26:15 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/affinity-dev/' to since 1970-01-01 00:00:00+00:00\n"
+      "2018-06-08 10:11:19 augurlabs perceval.backends.core.pipermail[10295] INFO 33/33 MBoxes downloaded\n",
+      "2018-06-08 10:11:19 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message my perspective - I think the reason I care about the status of a project is that I can then base business features on it.; ignoring\n",
+      "2018-06-08 10:11:19 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message Brian Freeman:; ignoring\n",
+      "2018-06-08 10:11:19 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message Brian Freeman:; ignoring\n",
+      "2018-06-08 10:11:19 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message Brian Freeman:; ignoring\n",
+      "2018-06-08 10:11:19 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message Brian Freeman:; ignoring\n",
+      "2018-06-08 10:11:19 augurlabs perceval.backends.core.mbox[10295] WARNING Field 'Message-ID' not found in message Brian Freeman:; ignoring\n",
+      "2018-06-08 10:11:19 augurlabs perceval.backends.core.mbox[10295] INFO Done. 349/355 messages fetched; 6 ignored\n",
+      "2018-06-08 10:11:19 augurlabs perceval.backends.core.pipermail[10295] INFO Fetch process completed\n",
+      "2018-06-08 10:11:19 augurlabs perceval.backends.core.pipermail[10295] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/affinity-dev/' since 1970-01-01 00:00:00+00:00\n",
+      "2018-06-08 10:11:19 augurlabs perceval.backends.core.pipermail[10295] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/affinity-dev/' to since 1970-01-01 00:00:00+00:00\n"
      ]
     },
     {
@@ -99,11 +99,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-06-08 10:26:27 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO 15/15 MBoxes downloaded\n",
-      "2018-06-08 10:26:27 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] INFO Done. 163/163 messages fetched; 0 ignored\n",
-      "2018-06-08 10:26:27 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Fetch process completed\n",
-      "2018-06-08 10:26:27 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/alto-dev/' since 1970-01-01 00:00:00+00:00\n",
-      "2018-06-08 10:26:27 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/alto-dev/' to since 1970-01-01 00:00:00+00:00\n"
+      "2018-06-08 10:11:23 augurlabs perceval.backends.core.pipermail[10295] INFO 15/15 MBoxes downloaded\n",
+      "2018-06-08 10:11:23 augurlabs perceval.backends.core.mbox[10295] INFO Done. 163/163 messages fetched; 0 ignored\n",
+      "2018-06-08 10:11:23 augurlabs perceval.backends.core.pipermail[10295] INFO Fetch process completed\n",
+      "2018-06-08 10:11:23 augurlabs perceval.backends.core.pipermail[10295] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/alto-dev/' since 1970-01-01 00:00:00+00:00\n",
+      "2018-06-08 10:11:23 augurlabs perceval.backends.core.pipermail[10295] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/alto-dev/' to since 1970-01-01 00:00:00+00:00\n"
      ]
     },
     {
@@ -117,11 +117,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-06-08 10:26:53 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO 35/35 MBoxes downloaded\n",
-      "2018-06-08 10:26:54 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] INFO Done. 536/536 messages fetched; 0 ignored\n",
-      "2018-06-08 10:26:54 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Fetch process completed\n",
-      "2018-06-08 10:26:54 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' since 1970-01-01 00:00:00+00:00\n",
-      "2018-06-08 10:26:54 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' to since 1970-01-01 00:00:00+00:00\n"
+      "2018-06-08 10:11:33 augurlabs perceval.backends.core.pipermail[10295] INFO 35/35 MBoxes downloaded\n",
+      "2018-06-08 10:11:34 augurlabs perceval.backends.core.mbox[10295] INFO Done. 536/536 messages fetched; 0 ignored\n",
+      "2018-06-08 10:11:34 augurlabs perceval.backends.core.pipermail[10295] INFO Fetch process completed\n",
+      "2018-06-08 10:11:34 augurlabs perceval.backends.core.pipermail[10295] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' since 1970-01-01 00:00:00+00:00\n",
+      "2018-06-08 10:11:34 augurlabs perceval.backends.core.pipermail[10295] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' to since 1970-01-01 00:00:00+00:00\n"
      ]
     },
     {
@@ -135,9 +135,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-06-08 10:26:55 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO 1/1 MBoxes downloaded\n",
-      "2018-06-08 10:26:55 keanu-Inspiron-5567 perceval.backends.core.mbox[14588] INFO Done. 2/2 messages fetched; 0 ignored\n",
-      "2018-06-08 10:26:55 keanu-Inspiron-5567 perceval.backends.core.pipermail[14588] INFO Fetch process completed\n"
+      "2018-06-08 10:11:34 augurlabs perceval.backends.core.pipermail[10295] INFO 1/1 MBoxes downloaded\n",
+      "2018-06-08 10:11:34 augurlabs perceval.backends.core.mbox[10295] INFO Done. 2/2 messages fetched; 0 ignored\n",
+      "2018-06-08 10:11:34 augurlabs perceval.backends.core.pipermail[10295] INFO Fetch process completed\n"
      ]
     },
     {
