--- a/notebooks/PiperMail.ipynb
+++ b/notebooks/PiperMail.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/keanu/temp/augur_push/augur/notebooks\n",
+      "/home/keanu/temp/augur7/augur/notebooks\n",
       "_NamespacePath(['/home/keanu/anaconda3/envs/augur/lib/python3.6/site-packages/perceval'])\n",
-      "/home/keanu/temp/augur_push/augur/notebooks\n",
+      "/home/keanu/temp/augur7/augur/notebooks\n",
       "aalldp-dev\n",
       "File Exists\n",
       "alto-dev\n",
@@ -95,7 +95,7 @@
       "File uploaded  2\n",
       "True\n",
       "Finished\n",
-      "<augur.PiperReader.PiperMail object at 0x7ff1cb297e48>\n"
+      "<augur.PiperReader.PiperMail object at 0x7f6f647d19b0>\n"
      ]
     }
    ],
