--- a/notebooks/PiperMail.ipynb
+++ b/notebooks/PiperMail.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/keanu/temp/augur7/augur/notebooks\n",
+      "/home/keanu/temp/augur_push/augur/notebooks\n",
       "_NamespacePath(['/home/keanu/anaconda3/envs/augur/lib/python3.6/site-packages/perceval'])\n",
-      "/home/keanu/temp/augur7/augur/notebooks\n",
+      "/home/keanu/temp/augur_push/augur/notebooks\n",
       "aalldp-dev\n",
       "File Exists\n",
       "alto-dev\n",
@@ -91,11 +91,27 @@
       "wtf\n",
       "https://lists.opendaylight.org/pipermail/\n",
       "Hey\n",
+      "0   2018-04-17 14:37:58\n",
+      "Name: date, dtype: datetime64[ns]\n",
+      "0   2018-04-17 14:37:58\n",
+      "Name: date, dtype: datetime64[ns]\n",
+      "0   2018-04-18 11:11:16\n",
+      "Name: date, dtype: datetime64[ns]\n",
+      "0   2018-04-18 11:11:16\n",
+      "Name: date, dtype: datetime64[ns]\n",
       "File uploaded  2\n",
+      "0   2016-03-24 20:37:11\n",
+      "Name: date, dtype: datetime64[ns]\n",
+      "0   2016-03-24 20:37:11\n",
+      "Name: date, dtype: datetime64[ns]\n",
+      "0   2016-03-24 20:37:08\n",
+      "Name: date, dtype: datetime64[ns]\n",
+      "0   2016-03-24 20:37:08\n",
+      "Name: date, dtype: datetime64[ns]\n",
       "File uploaded  2\n",
       "True\n",
       "Finished\n",
-      "<augur.PiperReader.PiperMail object at 0x7f6f647d19b0>\n"
+      "<augur.PiperReader.PiperMail object at 0x7fbeb3ac3dd8>\n"
      ]
     }
    ],
