Now added the timezone and date correctly to the SQL Database

--- a/notebooks/PiperMail.ipynb
+++ b/notebooks/PiperMail.ipynb
@@ -11,14 +11,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/keanu/temp/augur_push/augur/notebooks\n",
+      "/home/keanu/temp/augur_push/augur1/augur/notebooks\n",
       "_NamespacePath(['/home/keanu/anaconda3/envs/augur/lib/python3.6/site-packages/perceval'])\n",
-      "/home/keanu/temp/augur_push/augur/notebooks\n",
+      "/home/keanu/temp/augur_push/augur1/augur/notebooks\n",
       "aalldp-dev\n",
       "File Exists\n",
       "alto-dev\n",
-      "File Exists\n",
-      "advisory-group\n",
       "File Exists\n",
       "archetypes-dev\n",
       "File Exists\n",
@@ -47,7 +45,7 @@
     "augurApp = augur.Application('../augur.config.json')\n",
     "print(os.getcwd())\n",
     "link = \"https://lists.opendaylight.org/pipermail/\"\n",
-    "mail = [\"aalldp-dev\",\"alto-dev\",\"advisory-group\",\"archetypes-dev\"]\n",
+    "mail = [\"aalldp-dev\",\"alto-dev\",\"archetypes-dev\"]\n",
     "#print(os.getcwd())\n",
     "file = \"opendaylight-\"\n",
     "if \"notebooks\" in os.getcwd():\n",
@@ -91,27 +89,12 @@
       "wtf\n",
       "https://lists.opendaylight.org/pipermail/\n",
       "Hey\n",
-      "0   2018-04-17 14:37:58\n",
-      "Name: date, dtype: datetime64[ns]\n",
-      "0   2018-04-17 14:37:58\n",
-      "Name: date, dtype: datetime64[ns]\n",
-      "0   2018-04-18 11:11:16\n",
-      "Name: date, dtype: datetime64[ns]\n",
-      "0   2018-04-18 11:11:16\n",
-      "Name: date, dtype: datetime64[ns]\n",
       "File uploaded  2\n",
-      "0   2016-03-24 20:37:11\n",
-      "Name: date, dtype: datetime64[ns]\n",
-      "0   2016-03-24 20:37:11\n",
-      "Name: date, dtype: datetime64[ns]\n",
-      "0   2016-03-24 20:37:08\n",
-      "Name: date, dtype: datetime64[ns]\n",
-      "0   2016-03-24 20:37:08\n",
-      "Name: date, dtype: datetime64[ns]\n",
+      "File uploaded  855\n",
       "File uploaded  2\n",
       "True\n",
       "Finished\n",
-      "<augur.PiperReader.PiperMail object at 0x7fbeb3ac3dd8>\n"
+      "<augur.PiperReader.PiperMail object at 0x7fd22c485d68>\n"
      ]
     }
    ],
