Improved on when the user downloads the messages, so now it only downloads the lastest messages and also added the Sentiment Analysis but this still needs a lot more work

--- a/notebooks/PiperMail.ipynb
+++ b/notebooks/PiperMail.ipynb
@@ -2,51 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-06-18 10:02:48 keanu-Inspiron-5567 perceval.backends.core.pipermail[7516] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/alto-dev/' since 1970-01-01 00:00:00+00:00\n",
-      "2018-06-18 10:02:48 keanu-Inspiron-5567 perceval.backends.core.pipermail[7516] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/alto-dev/' to since 1970-01-01 00:00:00+00:00\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/keanu/temp/augur_push/augur1/augur/notebooks\n",
-      "_NamespacePath(['/home/keanu/anaconda3/envs/augur/lib/python3.6/site-packages/perceval'])\n",
-      "/home/keanu/temp/augur_push/augur1/augur/notebooks\n",
-      "aalldp-dev\n",
-      "File Exists\n",
-      "archetypes-dev\n",
-      "File Exists\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-06-18 10:03:26 keanu-Inspiron-5567 perceval.backends.core.pipermail[7516] INFO 35/35 MBoxes downloaded\n",
-      "2018-06-18 10:03:26 keanu-Inspiron-5567 perceval.backends.core.mbox[7516] INFO Done. 536/536 messages fetched; 0 ignored\n",
-      "2018-06-18 10:03:26 keanu-Inspiron-5567 perceval.backends.core.pipermail[7516] INFO Fetch process completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created File alto-dev\n",
-      "Finished downloading files\n",
-      "https://lists.opendaylight.org/pipermail/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import augur\n",
     "from augur.PiperReader import PiperMail\n",
@@ -58,17 +18,136 @@
     "from perceval.backends.core.pipermail import Pipermail\n",
     "import perceval\n",
     "import os, os.path\n",
-    "\n",
-    "# create an Augur application so we can test our function\n",
-    "print(os.getcwd())\n",
-    "print(perceval.__path__)\n",
+    "import sqlalchemy as s\n",
+    "import datetime\n",
+    "import numpy as np\n",
+    "from dateutil.parser import parse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "if(\"notebooks\" not in os.getcwd()):\n",
     "    os.chdir(\"notebooks\")\n",
     "augurApp = augur.Application('../augur.config.json')\n",
+    "connect = augurApp.ghtorrentplus()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['issue_response_time']\n",
+      "Created Table\n"
+     ]
+    }
+   ],
+   "source": [
+    "table_names = s.inspect(connect.db).get_table_names()\n",
+    "print(table_names)\n",
+    "val = False\n",
+    "mail_lists = True\n",
+    "if(\"mail_lists\" not in table_names):\n",
+    "    mail_lists = False\n",
+    "if(\"mailing_list_jobs\" in table_names):\n",
+    "    lists_createdSQL = s.sql.text(\"\"\"SELECT project FROM mailing_list_jobs\"\"\")\n",
+    "    df1 = pd.read_sql(lists_createdSQL, connect.db)\n",
+    "    print(df1)\n",
+    "    val = True\n",
+    "else:\n",
+    "    columns2 = \"backend_name\",\"mailing_list_url\",\"project\",\"last_message_date\"\n",
+    "    df_mail_list = pd.DataFrame(columns=columns2)\n",
+    "    df_mail_list.to_sql(name='mailing_list_jobs',con=connect.db,if_exists='replace',index=False)\n",
+    "    lists_createdSQL = s.sql.text(\"\"\"SELECT project FROM mailing_list_jobs\"\"\")\n",
+    "    df1 = pd.read_sql(lists_createdSQL, connect.db)\n",
+    "    print(\"Created Table\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-06-21 15:10:43 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' since 1970-01-01 00:00:00+00:00\n",
+      "2018-06-21 15:10:43 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' to since 1970-01-01 00:00:00+00:00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/keanu/temp/augur_push/augur4/augur/notebooks\n",
+      "_NamespacePath(['/home/keanu/anaconda3/envs/augur/lib/python3.6/site-packages/perceval'])\n",
+      "/home/keanu/temp/augur_push/augur4/augur/notebooks\n",
+      "{'aalldp-dev': False, 'archetypes-dev': False}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-06-21 15:10:45 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO 1/1 MBoxes downloaded\n",
+      "2018-06-21 15:10:45 keanu-Inspiron-5567 perceval.backends.core.mbox[21549] INFO Done. 2/2 messages fetched; 0 ignored\n",
+      "2018-06-21 15:10:45 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO Fetch process completed\n",
+      "2018-06-21 15:10:45 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' since 1970-01-01 00:00:00+00:00\n",
+      "2018-06-21 15:10:45 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' to since 1970-01-01 00:00:00+00:00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created File aalldp-dev\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-06-21 15:10:47 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO 1/1 MBoxes downloaded\n",
+      "2018-06-21 15:10:47 keanu-Inspiron-5567 perceval.backends.core.mbox[21549] INFO Done. 2/2 messages fetched; 0 ignored\n",
+      "2018-06-21 15:10:47 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO Fetch process completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created File archetypes-dev\n",
+      "{'aalldp-dev': 'new', 'archetypes-dev': 'new'}\n",
+      "Finished downloading files\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create an Augur application so we can test our function\n",
+    "Piper = augurApp.piper()\n",
+    "print(os.getcwd())\n",
+    "print(perceval.__path__)\n",
     "print(os.getcwd())\n",
     "link = \"https://lists.opendaylight.org/pipermail/\"\n",
     "#mail = [\"aalldp-dev\",\"alto-dev\",\"archetypes-dev\"]\n",
-    "mail = [\"aalldp-dev\",\"archetypes-dev\",\"alto-dev\"]\n",
+    "#mail = [\"aalldp-dev\",\"alto-dev\",\"archetypes-dev\",\"dev\"]\n",
+    "#mail = [\"aalldp-dev\",\"archetypes-dev\",\"alto-dev\"]\n",
+    "mail = [\"aalldp-dev\",\"archetypes-dev\"]\n",
+    "mail_check = {key:False for key in mail}\n",
+    "print(mail_check)\n",
     "#print(os.getcwd())\n",
     "file = \"opendaylight-\"\n",
     "if \"notebooks\" in os.getcwd():\n",
@@ -76,56 +155,68 @@
     "path = \"/augur/data/opendaylight-\" \n",
     "for x in range(len(mail)):\n",
     "    #print(link+mail[x])\n",
-    "    #print(os.getcwd())\n",
-    "    #print(os.path.join(os.getcwd() + path+'.json'))\n",
-    "    place = os.path.join(os.getcwd() + path + mail[x] +'.json')\n",
-    "    if(os.path.exists(place)):\n",
-    "        print(mail[x])\n",
-    "        print(\"File Exists\")\n",
-    "        continue                   \n",
-    "    repo = Pipermail(url = \"https://lists.opendaylight.org/pipermail/\"+ mail[x] + \"/\",dirpath=\"tmp/archives\"+mail[x])\n",
-    "    #print(repo)\n",
-    "    outfile = open(place,\"w+\")\n",
-    "    for message in repo.fetch():\n",
-    "        obj = json.dumps(message, indent=4, sort_keys=True)\n",
-    "        outfile.write(obj)\n",
-    "        outfile.write('\\n')\n",
-    "    outfile.close()\n",
-    "    print(\"Created File\",mail[x])\n",
-    "print(\"Finished downloading files\")\n",
-    "print(link)"
+    "    if(mail[x] not in df1['project'].values ):\n",
+    "        #print(os.getcwd())\n",
+    "        #print(os.path.join(os.getcwd() + path+'.json'))\n",
+    "        place = os.path.join(os.getcwd() + path + mail[x] +'.json')           \n",
+    "        repo = Pipermail(url = \"https://lists.opendaylight.org/pipermail/\"+ mail[x] + \"/\",dirpath=\"tmp/archives_\"+mail[x])\n",
+    "        #print(repo)\n",
+    "        outfile = open(place,\"w+\")\n",
+    "        for message in repo.fetch():\n",
+    "            obj = json.dumps(message, indent=4, sort_keys=True)\n",
+    "            outfile.write(obj)\n",
+    "            outfile.write('\\n')\n",
+    "        outfile.close()\n",
+    "        mail_check[mail[x]] = 'new'\n",
+    "        print(\"Created File\",mail[x])\n",
+    "    else:\n",
+    "        last_updatedSQL = s.sql.text(\"\"\"SELECT last_message_date FROM \n",
+    "        mailing_list_jobs WHERE project = \"\"\" +  \"'\" + mail[x] + \"'\")\n",
+    "        last_updated_df = pd.read_sql(last_updatedSQL, connect.db)\n",
+    "        time = (last_updated_df['last_message_date'])  \n",
+    "        time = time.astype(object)\n",
+    "        place = os.path.join(os.getcwd() + path + 'temp_' + mail[x] +'.json')       \n",
+    "        repo = Pipermail(url = \"https://lists.opendaylight.org/pipermail/\"+ mail[x] + \"/\",dirpath=\"tmp/archives_\"+mail[x])\n",
+    "        outfile = open(place,\"w+\")\n",
+    "        print(type(time[0]))\n",
+    "        for message in repo.fetch(from_date=time[0]):\n",
+    "            mess_check = Piper.convert_date(message['data']['Date'])\n",
+    "            #mess_check = Piper.convert_date(\"Thu, 24 Mar 2019 20:37:11 +0000\")\n",
+    "            if (mess_check > time[0]):\n",
+    "                obj = json.dumps(message, indent=4, sort_keys=True)\n",
+    "                outfile.write(obj)\n",
+    "                outfile.write('\\n')\n",
+    "                print(\"Updated messages downloaded\")\n",
+    "                mail_check[mail[x]] = 'update'\n",
+    "        outfile.close()\n",
+    "        print(\"Checking to see for updated messages\")\n",
+    "print(mail_check)\n",
+    "print(\"Finished downloading files\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://lists.opendaylight.org/pipermail/\n",
-      "ugh\n",
-      "wtf\n",
-      "https://lists.opendaylight.org/pipermail/\n",
+      "Okay\n",
+      "Engine(mysql+pymysql://derek:***@ghdata.sociallycompute.io:3306/chaoss)\n",
+      "{'aalldp-dev': False, 'archetypes-dev': False}\n",
       "Hey\n",
-      "File uploaded  2\n",
-      "File uploaded  2\n",
-      "File uploaded  855\n",
-      "True\n",
-      "Finished\n",
-      "<augur.PiperReader.PiperMail object at 0x7f7e51ed1080>\n"
+      "Skipping\n",
+      "Skipping\n",
+      "Finished\n"
      ]
     }
    ],
    "source": [
-    "print(link)\n",
-    "temp = augurApp.piper()\n",
-    "temp.make(link)\n",
-    "print(temp)"
+    "Piper.make(connect.db,mail_check,mail,mail_lists)"
    ]
   }
  ],
